bug fix: cell outputs were too narrow

--- a/output/overrides.css
+++ b/output/overrides.css
@@ -1,3 +1,7 @@
 .cell .inner_cell {
 	overflow-x: auto;
 }
+
+.output_subarea {
+	max-width: 100% !important;
+}
